# dy_engine

./: .gitignore  CMakeLists.txt  README.md  build_vulkan.ps1
.github/workflows/: ci.yml
cmake/: BuildOptions.cmake  Dependencies.cmake  Engine_Options.cmake
docs/: dy_engine_보고서_DyD팀.docx  graphics-rhi-refactor-steps.md  section_rewrites.md  tmp.md
examples/: CMakeLists.txt  main.cpp
examples/01_HelloWindow/: CMakeLists.txt  main.cpp
examples/02_HelloRenderer/: CMakeLists.txt  main.cpp
examples/02_HelloRenderer/Shaders/: TexturedTrianglePS.glsl  TexturedTrianglePS.hlsl  TexturedTrianglePS.metal  TexturedTriangleVS.glsl  TexturedTriangleVS.hlsl  TexturedTriangleVS.metal  mesh_shadow_vs.glsl  mesh_vs.hlsl
examples/03_Cube/: CMakeLists.txt  main.cpp
examples/03_Cube/Shaders/: mesh_ps.glsl  mesh_shadow_vs.glsl  mesh_vs.glsl  mesh_vs.hlsl  mesh_vs.metal
examples/03_some/: main.cpp
examples/04_TexturedCube/: CMakeLists.txt  main.cpp
examples/04_TexturedCube/Shaders/: mesh_ps.hlsl  mesh_vs.glsl  mesh_vs.metal
examples/05_LoadModel/: CMakeLists.txt  LoadModelOptions.cpp  LoadModelOptions.h  LoadModelPlayback.cpp  LoadModelPlayback.h  main.cpp
examples/05_LoadModel/Shaders/: mesh_ps_bindless.glsl  mesh_shadow_vs.glsl  mesh_skinning_cs.glsl
examples/06_ShadowCube/: CMakeLists.txt  main.cpp
examples/06_ShadowCube/Shaders/: mesh_ps.glsl  mesh_ps.hlsl  mesh_ps.metal  mesh_shadow_vs.hlsl  mesh_shadow_vs.metal  mesh_vs.glsl
examples/07_RenderPath/: CMakeLists.txt  main.cpp
examples/07_RenderPath/Shaders/: mesh_ps.glsl  mesh_ps.hlsl  mesh_ps.metal  mesh_ps_bindless.glsl  mesh_ps_bindless.hlsl  mesh_vs.glsl  mesh_vs.hlsl
examples/08_LightingLab/: CMakeLists.txt  main.cpp
examples/08_LightingLab/Shaders/: mesh_ps.glsl  mesh_vs.glsl  tone_map_ps.glsl  tone_map_vs.glsl
examples/D3D12_FBX/: CMakeLists.txt  main.cpp
examples/D3D12_FBX/Shaders/: TestVS.hlsl
examples/D3D12_Lighting/: CMakeLists.txt  main.cpp
examples/D3D12_Lighting/Shaders/: TestPS.hlsl  TestVS.hlsl
examples/D3D12_Test/: CMakeLists.txt  main.cpp  shaders.hlsl
examples/D3D12_Test/Shaders/: TestPS.hlsl  TestVS.hlsl
examples/D3D12_gltf/: main.cpp
examples/D3D12_gltf/Shaders/: TestVS.hlsl
examples/Metal_test/: CMakeLists.txt  Shaders.metal  main.mm
examples/legacy/: triangle.frag  triangle.vert  triangle_shadow.vert
examples/legacy/D3D12_FBX/: main.cpp
examples/legacy/D3D12_Lighting/: main.cpp
examples/legacy/D3D12_Lighting/Shaders/: TestPS.hlsl  TestVS.hlsl
examples/legacy/D3D12_Test/: main.cpp
examples/legacy/D3D12_Test/Shaders/: TestPS.hlsl  TestVS.hlsl
examples/legacy/D3D12_gltf/: CMakeLists.txt  main.cpp
examples/legacy/D3D12_gltf/Shaders/: TestVS.hlsl
examples/legacy/orbit_scene/: CMakeLists.txt  main.cpp
examples/legacy/vulkan_lighting_volume/: CMakeLists.txt  main.cpp
examples/legacy/vulkan_lighting_volume/Shaders/: mesh.vert  trig.comp
examples/legacy/vulkan_test/: main.cpp
examples/legacy/vulkan_test/Shaders/: triangle.vert
examples/orbit_scene/: CMakeLists.txt  main.cpp
examples/vulkan_lighting_volume/: CMakeLists.txt  main.cpp
examples/vulkan_lighting_volume/Shaders/: mesh.frag  mesh.vert  shadow.vert
examples/vulkan_test/: CMakeLists.txt  main.cpp
examples/vulkan_test/Shaders/: mesh.frag  mesh.vert  triangle.frag
src/: Types.h
src/App/: Window.cpp  Window.h
src/Backends/D3D12/: CMakeLists.txt  D3D12Buffer.cpp  D3D12Buffer.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12Device.cpp  D3D12Device.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12Texture.cpp  D3D12Texture.h  main.cpp  shaders.hlsl
src/Backends/Metal/: CMakeLists.txt  MetalBuffer.h  MetalBuffer.mm  MetalCommandList.h  MetalCommandList.mm  MetalDevice.cpp  MetalDevice.h  MetalDevice.mm  MetalPipeline.h  MetalPipeline.mm  MetalTexture.h  MetalTexture.mm
src/Backends/Null/: CMakeLists.txt  NullDevice.cpp  NullDevice.h
src/Backends/Vulkan/: CMakeLists.txt  VulkanCommandList.cpp  VulkanCommandList.h  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDrawConstantLayout.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanResources.cpp  VulkanResources.h  VulkanRuntimePolicy.cpp  VulkanRuntimePolicy.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/Backends/Vulkan/Shaders/: triangle.frag  triangle.vert  triangle_shadow.vert
src/Core/: Image.h  ImageLoader.cpp  ImageLoader.h  Types.h
src/Core/App/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/Examples/: main.cpp
src/Graphics/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  FBXLoader.cpp  FBXLoader.h  GLTFLoader.cpp  GLTFLoader.h  GltfModelLoader.cpp  GpuScene.cpp  GpuScene.h  Image.h  ImageFile.cpp  ImageFile.h  ImageLoader.cpp  JobSystem.cpp  JobSystem.h  Lighting.h  LightingGpu.h  Loaders.h  Material.h  MaterialTexturePaths.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoaderCommon.cpp  ModelLoaderInternal.h  OBJLoader.cpp  OBJLoader.h  ObjLoader.cpp  ObjLoader.h  ObjLoader1.cpp  ObjLoader1.h  ObjectLoader.cpp  ObjectLoader.h  PerFrameBufferSet.h  RenderContext.h  RenderPass.h  (+23 more)
src/Math/: Math.cpp  Math.h
src/Platform/: Input.h  Profiler.h  Time.h  Window.cpp  Window.h
src/RHI/: Enums.h  Format.h  GraphicsPipeline.h  IBuffer.h  ICommandList.h  IDevice.cpp  IDevice.h  IPipelineState.h  IResourceSet.h  IResources.h  ISampler.h  IShader.h  ITexture.h  PipelineLayout.h  RHIDevice.h  RHIFactory.cpp  RendererDefaults.h  RendererShaderLayout.h  RendererShaderLayout.inc  Rendering.h  ResourceBarrier.h  ShaderLayout.h
src/UI/: Canvas.h  Font.h  Widget.h
