add_executable(vulkan_lighting_volume
	main.cpp
)

target_link_libraries(vulkan_lighting_volume PRIVATE ${PROJECT_NAME})

target_include_directories(vulkan_lighting_volume PRIVATE
	${CMAKE_SOURCE_DIR}/src
)

set_target_properties(vulkan_lighting_volume PROPERTIES FOLDER "Examples")

set(VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Shaders)
set(VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR ${CMAKE_BINARY_DIR}/generated/vulkan_lighting_volume_shaders)
set(VULKAN_LIGHTING_VOLUME_SHADER_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/src)
set(VULKAN_LIGHTING_VOLUME_SHADER_LAYOUT_FILE ${VULKAN_LIGHTING_VOLUME_SHADER_INCLUDE_DIR}/RHI/RendererShaderLayout.inc)

file(TO_CMAKE_PATH "${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}" VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR_CMAKE)
file(TO_CMAKE_PATH "${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}" VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR_CMAKE)

set(VULKAN_LIGHTING_VOLUME_SHADER_OUTPUTS
	${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/triangle.vert.spv
	${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/triangle.frag.spv
	${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/shadow.vert.spv
	${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/trig.comp.spv
)

add_custom_command(
	OUTPUT ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/triangle.vert.spv
	COMMAND ${CMAKE_COMMAND} -E make_directory ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}
	COMMAND ${VULKAN_GLSLANG_VALIDATOR} -I${VULKAN_LIGHTING_VOLUME_SHADER_INCLUDE_DIR} -V ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/mesh.vert -o ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/triangle.vert.spv
	DEPENDS ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/mesh.vert ${VULKAN_LIGHTING_VOLUME_SHADER_LAYOUT_FILE}
	COMMENT "Compiling Vulkan Lighting Volume vertex shader"
	VERBATIM
)

add_custom_command(
	OUTPUT ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/triangle.frag.spv
	COMMAND ${CMAKE_COMMAND} -E make_directory ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}
	COMMAND ${VULKAN_GLSLANG_VALIDATOR} -I${VULKAN_LIGHTING_VOLUME_SHADER_INCLUDE_DIR} -V ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/mesh.frag -o ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/triangle.frag.spv
	DEPENDS ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/mesh.frag ${VULKAN_LIGHTING_VOLUME_SHADER_LAYOUT_FILE}
	COMMENT "Compiling Vulkan Lighting Volume fragment shader"
	VERBATIM
)

add_custom_command(
	OUTPUT ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/shadow.vert.spv
	COMMAND ${CMAKE_COMMAND} -E make_directory ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}
	COMMAND ${VULKAN_GLSLANG_VALIDATOR} -I${VULKAN_LIGHTING_VOLUME_SHADER_INCLUDE_DIR} -V ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/shadow.vert -o ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/shadow.vert.spv
	DEPENDS ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/shadow.vert ${VULKAN_LIGHTING_VOLUME_SHADER_LAYOUT_FILE}
	COMMENT "Compiling Vulkan Lighting Volume shadow vertex shader"
	VERBATIM
)

add_custom_command(
	OUTPUT ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/trig.comp.spv
	COMMAND ${CMAKE_COMMAND} -E make_directory ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}
	COMMAND ${VULKAN_GLSLANG_VALIDATOR} -V ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/trig.comp -o ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR}/trig.comp.spv
	DEPENDS ${VULKAN_LIGHTING_VOLUME_SHADER_SOURCE_DIR}/trig.comp
	COMMENT "Compiling Vulkan Lighting Volume trigonometry compute shader"
	VERBATIM
)

add_custom_target(VulkanLightingVolumeShaders ALL DEPENDS ${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUTS})
add_dependencies(vulkan_lighting_volume VulkanLightingVolumeShaders)

target_compile_definitions(vulkan_lighting_volume PRIVATE
	DY_SHADER_DIR="${VULKAN_LIGHTING_VOLUME_SHADER_OUTPUT_DIR_CMAKE}"
)
